Set @media for descktop

--- a/scss/_third-section.scss
+++ b/scss/_third-section.scss
@@ -82,3 +82,9 @@ table {
     border-top: 1px gray solid ;
    
 }
+
+@media (min-width : 1100px) {
+    .game__third__section__table {
+        margin-block-start: 100px;
+    }
+}
