--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -445,6 +445,10 @@ table {
 .game__third__section__tablecell--lastrow {
   border-top: 1px gray solid; }
 
+@media (min-width: 1100px) {
+  .game__third__section__table {
+    margin-block-start: 100px; } }
+
 .game__fourth__section {
   background-image: url(../css/images/rectangle.png);
   padding-inline-start: 16px; }
