--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -451,7 +451,8 @@ table {
 
 .game__fourth__section {
   background-image: url(../css/images/rectangle.png);
-  padding-inline-start: 16px; }
+  padding-inline-start: 16px;
+  min-height: 960px; }
 
 .game__fourth__section--header {
   font-family: bebas-neue-bold;
@@ -534,6 +535,26 @@ table {
 
 .game__fourth__section__about--container {
   padding-block-end: 16px; }
+
+@media (min-width: 1100px) {
+  .game__fourth__section {
+    columns: 2; }
+  .lahti {
+    max-height: 183px; }
+  .game__fourth__secton__information {
+    margin-block-start: 303px;
+    margin-inline-start: 100px;
+    margin-inline-end: 200px; }
+  .game__fourth__section__about--container {
+    padding-block-start: 160px; }
+  .lahti {
+    margin-inline-end: 79px; }
+  .aaron {
+    margin-inline-end: 119px;
+    margin-inline-start: -1rem; }
+  .jada {
+    margin-inline-end: 225px;
+    margin-inline-start: -5rem; } }
 
 .game__fith__section {
   background-image: url(../css/images/bg-image_fith.png);
