--- a/scss/_second-section.scss
+++ b/scss/_second-section.scss
@@ -1,7 +1,7 @@
 .game__second__section {
     background-image: url(../css/images/bg_image_big.png);
     background-size: cover;
-    height: 515px;
+    height: 600px;
     background-repeat: no-repeat;
     background-position-x: -200px;
 
@@ -10,8 +10,8 @@
 
 .game__second__section__container {
     padding-block-start: 1rem;
-    height: 515px;
-    padding-inline-start: 100px;
+    height: 600px;
+    padding-inline-start: 190px;
     background: radial-gradient(50.45% 70.77% at 31.45% 10.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
 }
 
@@ -25,7 +25,7 @@
 
 .game__second__section__navigation {
     list-style: none;
-    padding-inline-start: 0;
+    padding-inline-start: 48px;
 }
 
 .game__second__section__header--info {
@@ -60,12 +60,21 @@ summary::-webkit-details-marker {
     display: none;
 }
 
+.game__second__section__summary {
+   position: relative;
+}
+
 .game__second__section__summary::before {
     content: '';
-    color: greenyellow;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 1px solid red;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    border: 3px solid white;
+    top: 0;
+    left: -3rem;
+    
   
 }
 
