--- a/scss/_second-section.scss
+++ b/scss/_second-section.scss
@@ -11,7 +11,7 @@
 .game__second__section__container {
     padding-block-start: 1rem;
     height: 600px;
-    padding-inline-start: 190px;
+    padding-inline-start: 140px;
     background: radial-gradient(50.45% 70.77% at 31.45% 10.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
 }
 
@@ -36,7 +36,7 @@
 }
 
 .game__second__section__navigation--list {
-
+  margin-top: 32px;
 }
 
 .game__second__section__summary {
