Fixed the desctop footer

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,9 +9,20 @@
     opacity: 0.5;
     font-size: 12px;
     line-height: 16px;
-    border-top: gray solid 1px;
     padding-top: 1rem;
    
+   
+}
+.footer__game__container {
+     display: flex;
+}
+
+.footer__game__container2 {
+    
+}
+
+.footer__link__container {
+    display: flex;
 }
 
 .footer__image {
@@ -44,7 +55,7 @@
 .footer__game__list {
   display: flex;
   text-transform: uppercase;
-  justify-content: space-between;
+  margin-right: 1rem;
   padding-inline-start: 0;
   margin-inline-end: 1.5rem;
   flex-wrap: wrap;
@@ -53,10 +64,14 @@
 
 }
 
+.main {
+    margin-inline-start: 0;
+}
+
 .footer__game__navigation__communication--list {
   display: flex;
   margin-inline-start: 0;
-  justify-content: space-between;
+  padding-inline-start: 100px;
   align-items: center;
   flex-wrap: wrap;
   padding-inline-start: 0;
@@ -67,8 +82,20 @@
     margin-inline-start: 1.5rem;
 }
 
-.footer__game__list--information {
+.main,
+.about,
+.feature,
+.quote,
+.system {
+    margin-right: 1rem;
+    padding: 1rem;
+}
+
+
+
+.footer__game__list--information1 {
     margin-inline-end: 1rem;
+    margin-right: 3rem;
     
 }
 
@@ -80,8 +107,19 @@
     width: 2.5rem;
 }
 
+.footer__game__link1 {
+    display: flex;
+    text-decoration: none;
+    color:  #FFFFFF;
+    
+    
+}
+
+
+
 .footer__game__list--communication {
     text-indent: -9999px;
+    margin-inline-start: 4rem;
    
 }
 
@@ -89,6 +127,7 @@
 .facebook {
     background-image: url(../css/images/facebook.png);
     background-repeat: no-repeat;
+    margin-inline-start: 0;
 
 }
 
@@ -130,4 +169,63 @@
       text-decoration: none;
       color: white;
       
+}
+
+.footer__game__container2 {
+    border-top: gray 1px solid;
+}
+
+@media (min-width : 1100px) {
+    .footer__game__container {
+        display: block;
+    }
+
+    .footer__game {
+        padding-top: 1rem;
+    }
+
+    .footer__game__image__container {
+        float: left;
+    }
+
+    .footer__image {
+        max-width: 30%;
+    }
+
+    .footer__game__list__security {
+    color:  #FFFFFF;
+    list-style: none;
+    font-family: open-sans;
+    line-height: 34px;
+    font-size: 12px;
+    letter-spacing: 0.1em;
+   
+    
+}
+
+.footer__image {
+    padding-bottom: 2rem;
+}
+
+
+.footer__game__image__container {
+    padding-block-start: 0;
+    
+}
+
+.footer__game__lists__of__security {
+    display: flex;
+    
+}
+
+.footer__game__container2 {
+    display: flex;
+    border-top: gray 1px solid;
+    justify-content: space-between;
+}
+
+.footer__game__navigation__security {
+    margin-inline-end: 4rem;
+}
+
 }
