--- a/scss/_fith-section.scss
+++ b/scss/_fith-section.scss
@@ -94,13 +94,13 @@ input[value="aliciliniavopir@gmail.com"]{
 
 @media (min-width : 1100px)  {
     .game__fith__section {
-        background-size: 20%;
+        background-size: 30%;
         background-position-x: 20px;
         
     }
 
     .fith__container {
-        background: radial-gradient(35% 200% at 10% 25%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0.15%, #080A0B 30%);
+        background: radial-gradient(45% 200% at 15% 35%, rgba(255, 255, 255, 0) 10%, rgba(0, 0, 0, 0) 1.15%, #080A0B 30%);
         padding-bottom: 30px;
         padding-top: 1rem;
         min-height: 523px;
@@ -111,7 +111,8 @@ input[value="aliciliniavopir@gmail.com"]{
 .game__fith__information {
     float: right;
     margin-inline-start: 500px;
-    margin-block-start: 50px;    
+    margin-block-start: 50px; 
+    margin-inline-end: 100px;  
 
 }
 
@@ -148,9 +149,13 @@ input[value="aliciliniavopir@gmail.com"]{
     margin-inline-start: 5rem;
 }
 
-.game__fith {
-    
+.input {
+    padding-block-end: 30px;
+    padding-block-start: 30px;
 }
 
+.game__fith__form {
+    
+}
 
 }
