fixed margin in the fourth button

--- a/scss/_fourth-section.scss
+++ b/scss/_fourth-section.scss
@@ -144,5 +144,9 @@
         margin-inline-end: 225px;
         margin-inline-start: -5rem;
     }
+
+    .game__fourth__section--button {
+        margin-block-start: 4rem;
+    }
   
 }
