Fixed the header , center the story

--- a/scss/_header-game-landing.scss
+++ b/scss/_header-game-landing.scss
@@ -143,7 +143,11 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
 }
+
+
 
 
 
