--- a/scss/_second-section.scss
+++ b/scss/_second-section.scss
@@ -1,7 +1,7 @@
 .game__second__section {
     background-image: url(../css/images/bg_image_big.png);
     background-size: cover;
-    height: 600px;
+    height: 100%;
     background-repeat: no-repeat;
     background-position-x: -200px;
 
@@ -10,8 +10,9 @@
 
 .game__second__section__container {
     padding-block-start: 1rem;
-    height: 600px;
+    height: 100%;
     padding-inline-start: 140px;
+    padding-block-end: 50%;
     background: radial-gradient(50.45% 70.77% at 31.45% 10.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
 }
 
@@ -25,7 +26,7 @@
 
 .game__second__section__navigation {
     list-style: none;
-    padding-inline-start: 48px;
+    padding-inline-start: 3rem;
 }
 
 .game__second__section__header--info {
@@ -33,6 +34,7 @@
     letter-spacing: 3px;
     font-size: 33px;
     color: white;
+    line-height: 33px;
 }
 
 .game__second__section__navigation--list {
@@ -66,28 +68,54 @@ summary::-webkit-details-marker {
 
 .game__second__section__summary::before {
     content: '';
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 1rem;
+    height: 1rem;
     background-color: black;
     border-radius: 50%;
     position: absolute;
-    border: 3px solid white;
+    border: 2px solid white;
     top: 0;
     left: -3rem;
     
   
 }
 
+.game__second__section--navigation {
+    
+}
+
+.game__second__section__detail {
+    position: relative;
+}
+
+details[open]::before {
+    content: '';
+    width: 2px;
+    height: calc(100% + 32px);
+    background-color: white;
+    position: absolute;
+    left: calc(0.5rem - 3rem);
+    
+    
+    
+    
+    
+}
+
 @media (min-width : 1100px) {
     .game__second__section {
     background-size: cover;
-    min-height: 960px;
+    height: 100%;
    
 }
 .game__second__section__container {
     padding-block-start: 1rem;
-    min-height: 960px;
+    height: 100%;
     background: radial-gradient(100% 100% at 10.45% 60.62%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 0%, rgba(4, 5, 6, 0.520671) 25.99%, rgba(6, 7, 8, 0.739601) 65.03%, #080A0B 99.74%);
+}
+
+.game__second__section__container {
+   padding-block-start: 10rem;
 }
 
 .game__second__section__detail,
